2006-06-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: more improvements

2006-06-05  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/BookReport.py (BookReportDialog.__init__): Correctly
	close managed window.

2006-06-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: improve parsing, comment the code better
	* example/gedcom/sample.ged: add new stuff
	* src/Mime/_PythonMime.py (_type_map): register .gpkg for non-linux
	platforms 

2006-06-04  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Set up for the next release.
	* src/Filters/Rules/Person/_RegExpName.py (RegExpName.labels): Typo.

2006-06-04  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/PSDrawDoc.py: fix imports - make it work
	* src/ReportBase/_StyleEditor.py: use ManagedWindow
	* src/ReportBase/_BareReportDialog.py: import StyleEditor
	* src/plugins/BookReport.py: fix "Center Person" display
	* src/plugins/WriteCD.py: fail gracefully without Gnome

2006-06-04  Don Allingham  <don@gramps-project.org>
	* src/plugins/Makefile.am (pkgdata_PYTHON): remove FilterEditor.py

2006-06-04  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/PSDrawDoc.py: Use ReportUtils.pt2cm.
	* src/docgen/OpenOfficeDoc.py: Use ReportUtils.pt2cm.
	* src/docgen/ODFDoc.py: Use ReportUtils.pt2cm.
	* src/ReportBase/Makefile.am (pkgdata_PYTHON): Remove _BookReport.py
	* src/plugins/Makefile.am (pkgdata_PYTHON): Move BookReport.py

2006-06-03  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py: add Table of Contents mark
	* src/docgen/OpenOfficeDoc.py: add Table of Contents mark
	* src/plugins/DetDecendantReport: add Table of Contents marks
	* src/plugins/AncestorReport.py: add Table of Contents marks
	* src/plugins/DetAncestralReport.py: add Table of Contents marks
	* src/plugins/DecendReport.py: add Table of Contents marks
	* src/plugins/IndivComplete.py: add Table of Contents marks